@@ -1,3 +1,9 @@
+2004-08-25  Richard Henderson  <rth@redhat.com>
+
+	* sysdeps/alpha/elf/start.S (_start): Use $15 as frame unwind
+	instead of $31.  Zero $15.
+	* sysdeps/unix/sysv/linux/alpha/clone.S (thread_start): Likewise.
+
 2004-08-25  Ulrich Drepper  <drepper@redhat.com>
 
 	* nscd/connections.c: Make socket nonblocking so that threads
